resolvendo exercicios semana02

--- a/semana02/atv02aula01css.html
+++ b/semana02/atv02aula01css.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styleatv02.css">
     <title>Aula 01 CSS</title>
 </head>
 <body>
     <p id="paragrafo">Este é um parágrafo de exemplo.</p>
-    <div id="bloco">Este é um elemento de bloco com fundo colorido</div>
+    <div class="bloco">Este é um elemento de bloco com fundo colorido</div>
     <ul>
         <li><a href="#">Link 1</a></li>
         <li><a href="#">Link 2</a></li>
