--- a/semana02/atv03aula01css.html
+++ b/semana02/atv03aula01css.html
@@ -4,15 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Aula 01 CSS</title>
-    <link rel="stylesheet" href="style1.css">
+    <link rel="stylesheet" href="styleatv03.css">
 </head>
 <body>
-    h1
+    <h1>Aprendendo Seletores Combinação</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel asperiores ipsum quibusdam autem aperiam, suscipit magnam sed sint ducimus natus minus fugit quis sit eligendi animi, fugiat quidem incidunt cum.</p>
     <div>
-        <p>Parágafo 01 da DIV</p>
-        <p>Parágrafo 02 da DIV</p>
-        <p>Parágrafo 03 da DIV</p>
+        <p>Parágafo da DIV</p>
     </div>
+    <p>Parágrafo 02 de exemplo</p>
+    <span>
+        <p>Parágrafo 03 de exemplo</p>
+    </span>
+
+    <section>
+        <p>Parágrafo 04</p>
+        <p>Parágrafo 05</p>
+    </section>
 </body>
 </html>
