--- a/semana02/atv01aula01css.html
+++ b/semana02/atv01aula01css.html
@@ -18,7 +18,7 @@
 
         ul>li>a{
             color: green;
-            text-decoration: none;
+            text-decoration: underline;
         }
 
     </style>
