finalizando as atv do dia 01 da semana 02

--- a/semana02/atv04aula01.html
+++ b/semana02/atv04aula01.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <h1>Aprendendo Seletores Avançados</h1>
-    
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quas numquam, earum laudantium aspernatur reiciendis dignissimos. Cupiditate pariatur in soluta ratione, temporibus blanditiis est debitis alias optio facilis molestias adipisci! Velit. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Asperiores excepturi explicabo exercitationem, impedit voluptates iusto cumque fuga minus nobis tenetur laborum dolore soluta quo animi iure velit dignissimos ut alias. Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus dignissimos praesentium debitis quis esse sint, explicabo tempore voluptates doloremque officia totam. Quia, optio beatae? Animi amet reprehenderit necessitatibus itaque nesciunt.</p>
 </body>
 </html>
