corrigi erro da img

--- a/semana02/atvaula05css.html
+++ b/semana02/atvaula05css.html
@@ -42,7 +42,7 @@
     </div>
 
     <section class="logo" id="logo">
-        <img src="logo.png" height="200" width="600" alt="Logo da codifico">
+        <img src="/img/logo.png" height="200" width="600" alt="Logo da codifico">
     </section>
 
     <footer class="certificado" id="certificado">
